# local_duckdb_read_databricks_unity_catalog

./: README.md  example.ipynb  pyproject.toml
devops/: bootstrap.sh
src/: utils.py
