[project]
name = "local-duckdb-read-databricks-unity-catalog"
version = "0.1.0"
description = "Example how to use duckdb locally to query Databricks UC data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deltalake>=1.1.0",
    "duckdb>=1.3.2",
    "ipykernel>=6.29.5",
    "pyarrow>=20.0.0",
    "python-dotenv>=1.1.1",
]
